[package]
name = "tower-add-origin"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]

[dependencies]
futures = "0.1"
http = "0.1"

[dependencies.tower-service]
git = "https://github.com/tenx-tech/tower"
rev = "20fb04e"

[dev-dependencies.tower-mock]
git = "https://github.com/tenx-tech/tower"
rev = "20fb04e"
