[package]
name = "tower-add-origin"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]

[dependencies]
futures = "0.1"
http = "0.1"
tower-service = { git = "https://github.com/tower-rs/tower", branch = "generic-request" }

[dev-dependencies]
tower-mock = { git = "https://github.com/tower-rs/tower", branch = "generic-request" }
