[package]
name = "tower-http-util"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT"
edition = "2018"

[dependencies]
futures = "0.1.25"
http = "0.1.16"
http-body = { version = "0.1.0", path = "../http-body" }
http-connection = { git = "https://github.com/hyperium/http-connection" }
tokio-buf = "0.1.0"
tokio-io = "0.1"
tokio-tcp = "0.1"
tower-service = "0.2.0"
# bytes = "0.4.11"
