[package]
name = "tower-http-util"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.1.0"
edition = "2018"
authors = ["Carl Lerche <me@carllerche.com>"]
readme = "README.md"
documentation = "https://docs.rs/tower-http-util/0.1.0/tower_http_util"
repository = "https://github.com/tower-rs/tower-http"
homepage = "https://github.com/tower-rs/tower-http"
license = "MIT"
description = """
Utilities for working with HTTP services.
"""

[dependencies]
http = "0.2"
http-body = "0.3"
http-connection = "0.1.0"
tokio = "0.2"
tower-service = "0.3"
