[package]
name = "tower-request-modifier"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT"
edition = "2018"
documentation = "https://docs.rs/tower-request-modifier/0.1.0/tower_request_modifier"
repository = "https://github.com/tower-rs/tower-http"
homepage = "https://github.com/tower-rs/tower-http"
description = """
Tower service middleware to modify the request.
"""

[dependencies]
http = "0.2"
tower-service = "0.3"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }
tokio-test = "0.2"
tower-test = "0.3"
