[package]
name = "axum-key-value-store"
version = "0.1.0"
authors = ["Tower Maintainers <team@tower-rs.com>"]
edition = "2021"
publish = false
license = "MIT"

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { path = "../../tower-http", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
axum = "0.8"
clap = { version = "4.4.4", features = ["derive"] }

[dev-dependencies]
http-body-util = "0.1"
