[package]
name = "custom-middleware-either"
version = "0.1.0"
authors = ["Tower Maintainers <team@tower-rs.com>"]
edition = "2021"
publish = false
license = "MIT"

[dependencies]
bytes = "1.12.0"
http = "1.4.2"
http-body-util = "0.1.3"
tokio = { version = "1.32.0", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
