[package]
name = "tonic-key-value-store"
version = "0.1.0"
authors = ["Tower Maintainers <team@tower-rs.com>"]
edition = "2018"
publish = false
license = "MIT"

[dependencies]
bytes = "1"
hyper = { version = "0.14.4", features = ["full"] }
prost = "0.7"
structopt = "0.3.21"
tokio = { version = "1.2.0", features = ["full"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = "0.4"
tower = { version = "0.4.5", features = ["full"] }
tower-http = { path = "../../tower-http", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"

[build-dependencies]
tonic-build = "0.4"
