[package]
name = "tonic-key-value-store"
version = "0.1.0"
authors = ["Tower Maintainers <team@tower-rs.com>"]
edition = "2021"
publish = false
license = "MIT"

[dependencies]
bytes = "1"
http = "1"
http-body = "1"
prost = "0.14"
tokio = { version = "1.2.0", features = ["full"] }
futures-util = { version = "0.3", default-features = false }
tokio-stream = { version = "0.1", features = ["sync", "net"] }
tonic = "0.14"
tonic-prost = "0.14"
tower = { version = "0.5", features = ["full"] }
tower-http = { path = "../../tower-http", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.3.16", features = ["derive"] }

[build-dependencies]
protox = "0.9"
tonic-prost-build = "0.14"
