[package]
name = "warp-key-value-store"
version = "0.1.0"
authors = ["Tower Maintainers <team@tower-rs.com>"]
edition = "2021"
publish = false
license = "MIT"

[dependencies]
bytes = "1"
clap = { version = "4.3.16", features = ["derive"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["service", "tokio"] }
tokio = { version = "1.2.0", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { path = "../../tower-http", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
warp = "0.4"

[dev-dependencies]
reqwest = { version = "0.12", features = ["gzip"] }
